<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">豆瓣电台</string>
    <string name="appwidget_name">豆瓣电台</string>
    <string name="intro_main">感谢下载使用豆瓣电台!</string>
    <string name="intro_main0">您可以在本程序中体验以下特色：\n1. 下载到SD卡试听\n2. 丰富的快捷键操作\n3. 自定义快捷键映射\n4. 定时叫床和睡觉定时\n5. 易用的桌面小部件</string>
    <string name="intro_main1"></string>
    <string name="intro_main2">下面是小部件各个按钮的介绍：
    </string>
    <string name="button_login_text">登录豆瓣</string>
    <string name="warning_not_open">请先按开始键开启豆瓣电台</string>
    <string name="warning_filename">文件名不合法</string>
    <string name="button_confirm_login_text">登录</string>
    <string name="text_login_email">E-Mail地址</string>
    <string name="text_login_passwd">密码</string>
    <string name="text_channel_unselected">点这里选择频道</string>
    <string name="text_channel_updating">正在更新频道列表</string>
    <string name="text_channel_closing">正在关闭电台...</string>
    <string name="public_channel_name">公共频道</string>
    <string name="notify_stop_timer">关机定时器已设定</string>
    <string name="notify_start_timer">起床定时器已设定</string>
    <string name="notify_login_succ">登录成功！</string>
    <string name="notify_login_fail">登录失败</string>
    <string name="text_network_error">网络发生故障</string>
    <string name="text_downloading">下载中</string>
    <string name="text_download_ok">下载完成</string>
    <string name="text_download_ok_long">下载完成</string>
    <string name="text_download_fail">下载失败</string>
    <string name="text_download_fail_long">下载失败，点击重试</string>
    <string name="text_download_cancelled">下载被取消</string>
    <string name="text_download_cancelled_long">下载被取消，点击重试</string>
    <string name="text_login_inprocess">正在登录</string>
    <string name="text_login_idle">未登录</string>
    <string name="text_login_ok">已登录</string>
    <string name="button_confirm_logout_text">退出登录</string>
    <string name="notify_logout_succ">您已退出登录</string>
    <string name="text_download_cancel">点击取消下载</string>
    <string name="notify_rate_fail">由于网络原因，调教失败</string>
    <string name="notify_music_banned">这首歌曲再也不会播放了</string>
    <string name="text_killed_for_memory">因为内存不足，豆瓣电台被系统强行关闭</string>
    <string name="err_get_songs">从频道获取音乐失败</string>
    <string name="radio_shake">允许甩动手机操作</string>
    <string name="text_shake_accuracy">甩动所需力度为</string>
    <string name="radio_media_button">允许短按耳机按钮</string>
    <string name="radio_media_button_long">允许长按耳机按钮</string>
    <string name="radio_media_button_long_1">按住耳机按钮超过</string>
    <string name="radio_media_button_long_2">秒判定为长按</string>
    <string name="radio_camera_button">允许长按相机键</string>
    <string name="radio_camera_button_1">(屏幕关闭时相机键无效)</string>
    <string name="radio_volume_button">使用上下音量键切换频道</string>
    <string name="radio_shutdown_on_idle_1">暂停超过</string>
    <string name="radio_shutdown_on_idle_2">分钟后自动关闭进程</string>
    <string name="radio_shutdown_on_idle_3">(关闭闲置进程可节省电量)</string>
    <string name="radio_auto_close_1">定时关闭(睡觉模式)</string>
    <string name="radio_auto_close_2">分钟</string>
    <string name="radio_enable_stop_timer">定时关闭</string>
    <string name="radio_enable_start_timer">起床定时</string>
    
    <string name="text_ad_shown">广告已显示</string>
    <string name="text_ad_hidden">广告已隐藏</string>
        
    <string name="button_name_ban">禁播</string>
    <string name="button_name_rate">加心</string>
    <string name="button_name_unrate">去心</string>
    <string name="button_name_menu">设定</string>
    <string name="button_name_skip">换曲</string>
    <string name="button_name_play">开始</string>
    <string name="button_name_pause">暂停</string>
    <string name="button_name_download">下载</string>
    
    
    <string name="options_act">快捷操作</string>
    <string-array name="options_act">
	    <item>切换曲目</item>
	    <item>切换频道</item>
	    <item>下载曲目</item>
	    <item>暂停/继续</item>
	    <item>标记喜欢并下载曲目</item>
	    <!-- <item>什么都不做</item> -->
    </string-array>
    <string name="options_timer_list">快速定时</string>
    <string-array name="options_timer_list">
        <item>快速选择时间</item>
        <item>半小时后</item>
        <item>1小时后</item>
        <item>2小时后</item>
        <item>8小时后</item>        
    </string-array>
    <string name="text_error_network">由于网络原因登录失败</string>
    <string name="text_action_fail_due_to_not_login">要想让服务器永久记住您的喜好，请在菜单里登录(或注册)豆瓣帐号哦!</string>
    <string name="changelog">
    v0.8 2011-11-13\n
    1.新增：睡觉定时和起床定时\n
    2.新增：检查和下载程序新版本\n
    3.新增：快捷键："加心并下载"操作\n
    4.频道列表恢复为从官方API自动更新\n
    5.尝试修复屏幕休眠无法继续播放问题\n
    6.尝试改善程序无响应问题\n
    7.更换主界面壁纸(后续版本将提供自定义壁纸功能)\n
    8.在某些ROM(如MIUI)中可选择将豆瓣电台设置为优先响应耳机线控按钮\n
    9.尝试修复2.3系统下载崩溃的问题\n
    10.其他bug修复\n
    \n
    v0.7.2.1 2011-09-26\n
    1.尝试修复2.3.3下载崩溃的问题\n
    2.降低音乐重复几率\n
    \n
    v0.7.2 2011-08-24\n
    1.修复豆瓣从8月23日起无法使用的故障\n
    2.更新到官方最新频道列表\n
    3.在主程序菜单中添加登录/登出选项\n
    4.在主程序菜单中添加意见反馈选项\n
    \n
    v0.7.1 2011-07-16\n
    1.修复一个暂停状态下打完电话自动播放的问题\n
    \n
    v0.7 2011-07-08\n
    1.新增主程序界面(点击豆瓣电台程序图标进入)\n
    2.恢复暂停按钮（可设置暂停超时后关闭进程）\n
    3.新增自定义快捷键(请在设置菜单设定)\n
    4.新增耳机按钮长按快捷键\n
    5.新增相机按钮快捷键(屏幕关闭时不可用)\n
    6.修复按钮不响应等问题\n
    7.用户界面更改，重新设计桌面小部件\n
    8.新增点击豆瓣电台通知图标进入主界面\n
    9.改善下载实现，保证下载正确进行\n
    10.更新频道列表\n
    \n
    v0.6.1 2011-06-26\n
    1.修复一个程序崩溃问题\n
    \n
    v0.6 2011-06-21\n
    1.更新到最新频道列表\n
    2.解决访问无效频道时的无限崩溃问题\n
    3.尝试解决下载时程序崩溃的问题\n
    4.加入通知栏的换曲提示\n
    5.下载完成后立即扫描到系统音乐库\n
    6.将豆瓣提升为前台服务减小被杀几率\n
    7.增加稳定性\n
    \n
    v0.5 2011-06-10\n
    1.添加登录和调教功能(请在频道列表界面登录)\n
	2.来去电时暂停音乐播放\n
	3.预读列表，加快换歌速度\n
	4.改写下载界面，并添加进度提示\n
	5.修正非正常退出时的状态更新问题\n
	6.修正横竖屏切换时状态更新问题\n
	7.改善歌曲名被按钮遮挡的问题\n
	\n
	v0.1 2011-05-26\n
	1.豆瓣电台第一个版本\n
	\n
    </string>
</resources>
