<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" 
  android:orientation="vertical"
  android:background="@drawable/ios5background"
  >
	<TextView 
			android:text="@string/text_login_email" 
			android:id="@+id/textView1" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			/>
    
    <EditText 
    		android:text="" 
    		android:id="@+id/editEmail" 
    		android:layout_width="280dip" 
    		android:layout_height="wrap_content"
    		android:singleLine="true"/>
    <TextView 
    		android:text="@string/text_login_passwd" 
    		android:id="@+id/textView2" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		/>
    <EditText 
    		android:text="" 
    		android:id="@+id/editPasswd" 
    		android:layout_width="280dip" 
    		android:layout_height="wrap_content"
    		android:password="true" android:singleLine="true"/>
    <Button 
    		android:text="@string/button_confirm_login_text" 
    		android:id="@+id/buttonLogin" 
    		android:layout_centerHorizontal="true"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:gravity="center" 
    		android:layout_gravity="center"
    		android:paddingBottom="10dip"
    		android:paddingTop="10dip"
    		android:paddingLeft="20dip"
    		android:paddingRight="20dip"
    		/>
    <TextView 
    		android:paddingTop="30dip"
    		android:paddingBottom="30dip"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:linksClickable="true" 
    		android:text="注册豆瓣电台账号" 
    		android:id="@+id/textRegister" 
    		android:layout_gravity="center"></TextView>

</LinearLayout>
