<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="center_vertical"
			    android:orientation="vertical" 
			    android:background="@drawable/ios5background">
    <CheckBox
        android:id="@+id/radioShowAd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_ad_shown" />
    <TextView
        android:id="@+id/showAdHint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12dip"
        android:paddingLeft="5dip"
        android:textColor="#ffffff"
        android:text="帮作者点击广告以示支持"
        />
    <TextView
        android:id="@+id/border03"
        android:background="@drawable/divider_horizontal_highlight"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        />
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	            android:id="@+id/scroll" 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            >
		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center"
		    android:orientation="vertical" >
		    <LinearLayout
		        xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:orientation="vertical" >
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:paddingTop="10dip"
				    android:layout_width="fill_parent"
				    android:layout_height="50dip"		   
				    >
					<CheckBox 
				    	android:text="@string/radio_enable_stop_timer" 
				    	android:id="@+id/cbEnableStopTimer" 
				    	android:textColor="#ffffff"
				    	android:layout_width="fill_parent" 
				    	android:layout_height="fill_parent">
				    </CheckBox>
				    <Spinner 		    	
				    	android:layout_width="wrap_content" 
				    	android:layout_height="fill_parent" 
				    	android:id="@+id/spinnerStopTimerShortcut"
				    	android:prompt="@string/options_timer_list"
				    	>
			    	</Spinner>
			    </LinearLayout>
		        <TimePicker
		            android:id="@+id/stopTimerPicker"
		            android:paddingTop="10dip"
		            android:paddingLeft="50dip"
		            android:paddingRight="50dip"
		            android:paddingBottom="10dip"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            />
		   	</LinearLayout>
		   	<TextView
		    	android:id="@+id/border01"
		    	android:background="@drawable/divider_horizontal"
		    	android:layout_width="fill_parent"
		    	android:layout_height="1dp"
		    	/>
		     <LinearLayout
		   		xmlns:android="http://schemas.android.com/apk/res/android" 
		   		android:orientation="horizontal"
		   		android:layout_width="fill_parent"
		   		android:paddingTop="10dip"
		   		android:layout_height="50dip"   		
		   		>
			    <CheckBox 
			    	android:text="@string/radio_enable_start_timer" 
			    	android:id="@+id/cbEnableStartTimer" 
			    	android:textColor="#ffffff"
			    	android:layout_width="fill_parent" 
			    	android:layout_height="fill_parent">
			    </CheckBox>
			    <Spinner 
			    	android:layout_width="wrap_content" 
			    	android:layout_height="fill_parent" 
			    	android:id="@+id/spinnerStartTimerShortcut"
			    	android:prompt="@string/options_timer_list"
			    	>
		    	</Spinner>
		    </LinearLayout>
		    <TimePicker
		            android:id="@+id/startTimerPicker"
		            android:paddingLeft="50dip"
		            android:paddingRight="50dip"
		            android:paddingBottom="10dip"
		            android:paddingTop="10dip"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            />
		    <TextView
		    	android:id="@+id/border02"
		    	android:background="@drawable/divider_horizontal"
		    	android:layout_width="fill_parent"
		    	android:layout_height="1dp"
		    	/>
		</LinearLayout>
	</ScrollView>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <com.google.ads.AdView android:id="@+id/adView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    ads:adUnitId="a14ead609d3bbf9"
                    ads:adSize="BANNER"
                    ads:loadAdOnCreate="true"
                    >
        </com.google.ads.AdView>
    </LinearLayout>
</LinearLayout>